myteo/test/parser/ast/type/function_empty_type_params.myte
module Test

type t = <>(int) => string